[package]
name = "chumtree"
version = "0.2.0"
authors = ["Israel Basurto <isra@ibasrt0.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahash = "4.0.1"
unicode-normalization = "0.1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
globset = "0.4"

[dependencies.chrono]
version = "0.4"
features = ["serde"]
